# ros_input_output

./: CMakeLists.txt  README.md  install.sh  package.xml
launch/: keyboard.launch  mouse.launch  nodes.launch  record.launch  screen.launch
msg/: gui_event.msg
src/: keyboard_ros_node.cpp  keyboardgrab_ros_node.cpp  mouse_ros_node.cpp  screengrab_ros_node.cpp
